Adding css and bcit link

--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset=utf-8>
-        <title>Index</title>
-    </head>
 
-    <body>
+<head>
+    <meta charset=utf-8>
+    <title>Index</title>
+    <link href="css/stylesheet.css" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <h1>
             ACIT 1620 week 3 lab
         </h1>
-        <h1>
-            Following is the little bit inro. about me.
-        </h1>
-        <p>
-            hi there, hope you might be doing good.<br>
-            My name is <em>Harmandeep Singh Dhindsa</em>. I am from <strong>India</strong> and is enrrolled in CIT program<br>
-            in BCIT campus. I completed my school last year and in order to find best of IT sector , i choose bcit as my<br>
-             main option to move forward in my carrer. I like to listen to <strong>Punjabi</strong> beat music and moreover i miss my home too much.
-        </p>
-        <ol>
-            List of coureses:
-            <li>
-                ACIT 1110
-            </li>
-            <li>
-                ACIT 1630
-            </li>
-            <li>
-                <a href="https://learn.bcit.ca/d2l/le/content/673006/Home">ACIT 1620</a>
-            </li>
-        </ol>
-    </body>
-</html>    
- 
+    </header>
+    <main>
+        <section>
+            <h3>
+                Following is the little bit inro. about me.
+            </h3>
+            <article>
+                <p>
+                    hi there, hope you might be doing good.<br>
+                    My name is <em>Harmandeep Singh Dhindsa</em>. I am from <strong>India</strong> and is enrrolled in
+                    CIT
+                    program<br>
+                    in BCIT campus. I completed my school last year and in order to find best of IT sector , i choose
+                    bcit
+                    as my<br>
+                    main option to move forward in my carrer. I like to listen to <strong>Punjabi</strong> beat music
+                    and
+                    moreover i miss my home too much.
+
+                </p>
+            </article>
+        </section>
+        <section>
+            <ol>
+                <h3>List of coureses:</h3>
+                <li>
+                    ACIT 1110
+                </li>
+                <li>
+                    ACIT 1630
+                </li>
+                <nav>
+                    <li>
+                        <a href="https://learn.bcit.ca/d2l/le/content/673006/Home" title="Acit 1620">ACIT 1620</a>
+                    </li>
+                </nav>
+            </ol>
+        </section>
+        <section>
+            <h3>BCIT (British Columbia Institute Of Technology)</h3>
+            <nav>
+            <a href="https://www.bcit.ca/"><img src="images/bcit_logo.png"></a>
+            </nav>
+        </section>
+    </main>
+</body>
+
+</html>
