--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 class=font_change>
             ACIT 1620 week 3 lab
         </h1>
     </header>
@@ -21,7 +21,7 @@
             <article>
                 <p>
                     hi there, hope you might be doing good.<br>
-                    My name is <em>Harmandeep Singh Dhindsa</em>. I am from <strong>India</strong> and is enrrolled in
+                    My name is <i>Harmandeep Singh Dhindsa</i>. I am from <strong>India</strong> and is enrrolled in
                     CIT
                     program<br>
                     in BCIT campus. I completed my school last year and in order to find best of IT sector , i choose
@@ -34,28 +34,12 @@
                 </p>
             </article>
         </section>
-        <section>
-            <ol>
-                <h3>List of coureses:</h3>
-                <li>
-                    ACIT 1110
-                </li>
-                <li>
-                    ACIT 1630
-                </li>
-                <nav>
-                    <li>
-                        <a href="https://learn.bcit.ca/d2l/le/content/673006/Home" title="Acit 1620">ACIT 1620</a>
-                    </li>
-                </nav>
-            </ol>
-        </section>
-        <section>
-            <h3>BCIT (British Columbia Institute Of Technology)</h3>
-            <nav>
-            <a href="https://www.bcit.ca/"><img src="images/bcit_logo.png"></a>
-            </nav>
-        </section>
+        
+       
+        <nav class=text_centre>
+            <a href="misc/course.html" title="Link to courses ">Courses</a> 
+            <a href="misc/school.html" title="Link to school">School</a>
+        </nav>
     </main>
 </body>
 
